--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "idx": "^2.5.6",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-redux": "^7.1.0-rc.1",
     "react-slick": "^0.25.2",
+    "redux": "^4.0.0-rc.1",
     "styled-components": "^4.1.3"
   },
   "devDependencies": {
