--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.tsx",
   "scripts": {
     "start": "webpack-dev-server --mode development --open --hot",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -22,11 +23,14 @@
     "@babel/core": "^7.3.4",
     "@babel/preset-env": "^7.3.4",
     "@babel/preset-react": "^7.0.0",
+    "@babel/preset-typescript": "^7.7.2",
+    "@types/jest": "^24.0.23",
     "@types/react": "^16.8.7",
     "@types/react-dom": "^16.8.2",
     "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.0.5",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^24.9.0",
     "typescript": "^3.3.3333",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3",
